# Magmatic

./: .gitattributes  .gitignore  CMakeLists.txt  main.cpp  readme.md
CMakeModules/: CMakeDetermineGLSLCompiler.cmake  CMakeGLSLCompiler.cmake.in  CMakeGLSLInformation.cmake  FindGLM.cmake  FindOgg.cmake  FindOpus.cmake  FindOpusFile.cmake  FindTinyGLTF.cmake  FindVorbisFile.cmake  Findglm.cmake  Findstb.cmake
examples/: Application.cpp  Application.hpp  CMakeLists.txt  MainTest.cpp
examples/device_enumeration/: CMakeLists.txt  main.cpp
examples/first_test/: ActionHandlers.cpp  ActionHandlers.hpp  Application.cpp  Application.hpp  CMakeLists.txt  MainTest.cpp  shader.frag  shader.vert
examples/model_info/: CMakeLists.txt  main.cpp
examples/resources/: basic_tank.gltf  bit-sound.opus
examples/simple_ecs_example/: App.cpp  App.hpp  CMakeLists.txt  EndSystem.hpp  Events.hpp  main.cpp
examples/simple_example/: CMakeLists.txt
examples/sound_test/: CMakeLists.txt  main.cpp
include/: Buffer.hpp  CMakeLists.txt  CommandBuffer.hpp  CommandPool.hpp  DescriptorSets.hpp  Fence.hpp  Fences.hpp  Framebuffers.hpp  Image.hpp  Instance.hpp  LogicalDevice.hpp  PhysicalDevice.hpp  Pipeline.hpp  QueueType.hpp  RenderPass.hpp  Semaphore.hpp  SemaphoreType.hpp  Semaphores.hpp  Shader.hpp  Surface.hpp  SwapChain.hpp  UniformBufferObject.hpp  Vertex.hpp  VertexBuffer.hpp  Window.hpp  utils.hpp
include/core/: BaseCamera.hpp  Box.hpp  CMakeLists.txt  Camera.hpp  CameraConfiguration.hpp  CameraMatrix.hpp  Frustum.hpp  QuaternionCamera.hpp  Ray.hpp
include/core/camera/: BaseCamera.hpp  CameraConfiguration.hpp  PlayerCamera.hpp  QuaternionCamera.hpp
include/ecs/: CMakeLists.txt  ComponentManager.hpp  ComponentMapping.h  ComponentMapping.hpp  ECS.hpp  ECSConfig.hpp  ECSTypes.hpp  EntityManager.h  EntityManager.hpp  EventRelay.hpp  FullEntity.hpp  FullEntityIteratorAdapter.hpp  System.hpp  SystemManager.hpp
include/ecs/executor/: ParallelExecutor.hpp
include/network/: AddressIPv4.h  CMakeLists.txt  SocketUDP.h
include/render/: Bitmap.hpp  Buffer.hpp  CMakeLists.txt  CommandBuffer.hpp  CommandPool.hpp  Cursor.hpp  DepthResources.hpp  DescriptorSets.hpp  DescriptorWriteUpdate.hpp  Fences.hpp  Framebuffers.hpp  Image.hpp  IndexBuffer.hpp  Instance.hpp  LogicalDevice.hpp  Model.hpp  ModelData.hpp  Monitor.hpp  PhysicalDevice.hpp  Pipeline.hpp  PushConstantObject.h  QueryPool.hpp  QueueType.hpp  RenderPass.hpp  Sampler.hpp  SemaphoreType.hpp  Semaphores.hpp  Shader.hpp  Surface.hpp  SwapChain.hpp  Texture.hpp  TexturedVertex.hpp  UniformBuffer.hpp  UniformBufferObject.hpp  Vertex.hpp  VertexBuffer.hpp  Window.hpp  utils.hpp
include/render/model/: Model.h  Model.hpp  ModelData.hpp
include/render/model/model_data_loader/: ModelDataLoader.hpp
include/render/model/model_data_loader/formats/: ModelDataLoaderConcrete.hpp  ModelDataLoadergltf.hpp
include/render/model_data_loader/: ModelDataLoader.hpp
include/render/model_data_loader/formats/: ModelDataLoaderConcrete.hpp  ModelDataLoadergltf.hpp  ModelLoaderConcrete.hpp
include/sound/: CMakeLists.txt  Sound.hpp  SoundBuffer.hpp  SoundDevice.hpp  SoundLoader.hpp  SoundSource.hpp
include/sound/formats/: SoundLoader.hpp  SoundLoaderConcrete.hpp  SoundLoaderOgg.hpp  SoundLoaderOpus.hpp  SoundLoaderVorbis.hpp
include/utils/: CMakeLists.txt
include/utils/dgraph/: DGraph.hpp
include/utils/factory/: FileLoaderFactory.hpp
include/utils/thread_pool/: ThreadPool.hpp
src/: CMakeLists.txt  CommandBuffer.cpp  Instance.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  Pipeline.cpp  RenderPass.cpp  Shader.cpp  Surface.cpp  SwapChain.cpp  Window.cpp  utils.cpp
src/core/: Box.cpp  CMakeLists.txt  Camera.cpp  CameraConfiguration.cpp  CameraMatrix.cpp  Frustum.cpp  QuaternionCamera.cpp  Ray.cpp
src/core/camera/: CameraConfiguration.cpp  CameraMatrix.cpp  PlayerCamera.cpp  QuaternionCamera.cpp
src/ecs/: CMakeLists.txt  ComponentManager.cpp  ECS.cpp  EntityManager.cpp  SystemManager.cpp
src/ecs/executor/: ParallelExecutor.cpp
src/network/: AddressIPv4.cpp  CMakeLists.txt  SocketUDP.cpp
src/render/: Bitmap.cpp  Buffer.cpp  CMakeLists.txt  CommandBuffer.cpp  CommandPool.cpp  Cursor.cpp  DepthResources.cpp  DescriptorSets.cpp  DescriptorWriteUpdate.cpp  Fences.cpp  Framebuffers.cpp  Image.cpp  IndexBuffer.cpp  Instance.cpp  LogicalDevice.cpp  Monitor.cpp  PhysicalDevice.cpp  Pipeline.cpp  QueryPool.cpp  RenderPass.cpp  Sampler.cpp  Semaphores.cpp  Shader.cpp  Surface.cpp  SwapChain.cpp  Texture.cpp  VertexBuffer.cpp  Window.cpp  utils.cpp
src/render/model/: Model.cpp
src/render/model/model_data_loader/formats/: ModelDataLoadergltf.cpp
src/render/model_data_loader/formats/: ModelDataLoadergltf.cpp
src/sound/: CMakeLists.txt  Sound.cpp  SoundBuffer.cpp  SoundDevice.cpp  SoundSource.cpp
src/sound/formats/: SoundLoader.cpp  SoundLoaderOgg.cpp  SoundLoaderOpus.cpp  SoundLoaderVorbis.cpp
src/utils/: CMakeLists.txt
src/utils/thread_pool/: ThreadPool.cpp
test/: CMakeLists.txt
test/core/: CMakeLists.txt  CameraMatrixTest.cpp
test/core/camera/: CameraMatrixTest.cpp
test/ecs/: CMakeLists.txt  ComponentManagerTest.cpp  ComponentMappingTest.cpp  ECSTest.cpp  EntityManagerTest.cpp  EventRelayTest.cpp  SystemManagerTest.cpp
test/utils/: CMakeLists.txt  ThreadPoolTest.cpp
test/utils/dgraph/: DGraphTest.cpp
