target_sources(magmatic-render
		PUBLIC
		Window.hpp
		Instance.hpp
		PhysicalDevice.hpp
		LogicalDevice.hpp
		Surface.hpp
		SwapChain.hpp
		Shader.hpp
		Pipeline.hpp
		RenderPass.hpp
		Framebuffers.hpp
		CommandPool.hpp
		CommandBuffer.hpp
		QueueType.hpp
        Semaphores.hpp
		SemaphoreType.hpp
		Vertex.hpp
        Buffer.hpp
		utils.hpp
		UniformBufferObject.hpp
		)

add_subdirectory(sound)